ch 8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  rules:
  - host: alpaca.example.local.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alpaca
            port: 
              number: 8080
  - host: bandicoot.example.local.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bandicoot
            port: 
              number: 8080
  defaultBackend:
    service:
      name: be-default
      port: 
        number: 8080
